--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -9,8 +9,7 @@
     <!--CS1573: Parameter has no matching param tag in the XML comment -->
     <!--CS1574: XML comment has cref attribute that could not be resolved-->
     <!--CS1734: XML comment has a paramref tag, but there is no parameter by that name-->
-    <!--CS8785: Generator failed to generate source -->
-    <WarningsAsErrors>nullable,CS1570,CS1571,CS1572,CS1573,CS1574,CS1734,CS8785</WarningsAsErrors>
+    <WarningsAsErrors>nullable,CS1570,CS1571,CS1572,CS1573,CS1574,CS1734</WarningsAsErrors>
     <ProduceReferenceAssembly>True</ProduceReferenceAssembly>
     <GenerateErrorForMissingTargetingPacks>false</GenerateErrorForMissingTargetingPacks>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
