--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -110,12 +110,10 @@ jobs:
           msbuildArgs: '/restore'
 
       # pack
-      - task: VSBuild@1
+      - task: CmdLine@2
         displayName: 'Build and Pack CommunityToolkit.Maui.Markup'
         inputs:
-          solution: '$(PathToCommunityToolkitCsproj)'
-          configuration: 'Release'
-          msbuildArgs: '/restore -t:pack -p:PackageVersion=$(NugetPackageVersion) -p:Version=$(NugetPackageVersion) -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg'
+          script: 'dotnet pack -c Release $(PathToCommunityToolkitCsproj) -p:PackageVersion=$(NugetPackageVersion) --output $(Build.ArtifactStagingDirectory)/nuget -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg'
 
       # check vulnerabilities
       - powershell: |
