Add Tizen TFM to Sample

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -19,4 +19,8 @@
   <ItemGroup>
     <InternalsVisibleTo Include="CommunityToolkit.Maui.Markup.UnitTests" />
   </ItemGroup>
+
+  <PropertyGroup Condition="'$(TF_BUILD)' == 'true' and $([MSBuild]::IsOSPlatform('windows')) == 'true'">
+    <IncludeTizenTargetFrameworks>true</IncludeTizenTargetFrameworks>
+  </PropertyGroup>
 </Project>
