--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,14 +3,7 @@
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
-    <!--CS1570: XML comment has badly formed XML 'Expected an end tag for element [parameter] -->
-    <!--CS1571: XML comment on [construct] has a duplicate param tag for [parameter] -->
-    <!--CS1572: XML comment has a param tag for '[parameter]', but there is no parameter by that name -->
-    <!--CS1573: Parameter has no matching param tag in the XML comment -->
-    <!--CS1574: XML comment has cref attribute that could not be resolved-->
-    <!--CS1710: XML comment has a duplicate typeparam tag-->
-    <!--CS1734: XML comment has a paramref tag, but there is no parameter by that name-->
-    <WarningsAsErrors>nullable,CS1570,CS1571,CS1572,CS1573,CS1574,CS1710,CS1734</WarningsAsErrors>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <ProduceReferenceAssembly>True</ProduceReferenceAssembly>
     <GenerateErrorForMissingTargetingPacks>false</GenerateErrorForMissingTargetingPacks>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
