--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -218,6 +218,43 @@ jobs:
             [ $status -ne 0 ] && echo "Formatting errors found. In the Windows Command Line, please run \`dotnet format $PathToSamplesSolution\`, then commit + push the newly formatted code"
             exit $status
 
+  - job: verify_formatting_macos
+    displayName: Verify Code Formatting on macOS
+    pool:
+      vmImage: macos-12
+    steps:
+      - task: CmdLine@2
+        displayName: 'Set Xcode Version'
+        inputs:
+          script: echo '##vso[task.setvariable variable=MD_APPLE_SDK_ROOT;]'/Applications/Xcode_$(XcodeVersion).app;sudo xcode-select --switch /Applications/Xcode_$(XcodeVersion).app/Contents/Developer
+
+      - task: UseDotNet@2
+        displayName: 'Install Latest .NET SDK'
+        inputs:
+          packageType: 'sdk'
+          version: '$(NET_VERSION)'
+
+      - powershell: dotnet workload install maui
+        displayName: Install Latest .NET MAUI Workload
+
+      - pwsh: |
+          Invoke-WebRequest 'https://raw.githubusercontent.com/Samsung/Tizen.NET/main/workload/scripts/workload-install.ps1' -OutFile 'workload-install.ps1'
+          .\workload-install.ps1
+        displayName: Install Tizen Workload
+
+      - task: Bash@3
+        displayName: 'Verify Formatting'
+        env:
+          PathToSamplesSolution: $(PathToSamplesSolution)
+        inputs:
+          targetType: 'inline'
+          script: |
+            dotnet format $PathToSamplesSolution --verify-no-changes --exclude-diagnostics CA1416
+            status=$?
+            [ $status -eq 0 ] && echo "No errors found"
+            [ $status -ne 0 ] && echo "Formatting errors found. In the macOS Terminal, please run \`dotnet format $PathToSamplesSolution\`, then commit + push the newly formatted code"
+            exit $status
+
   - job: build_macos
     displayName: Build macOS Library
     pool:
