--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -183,7 +183,8 @@ jobs:
 
       # publish the packages
       - task: PublishBuildArtifacts@1
-        displayName: 'Publish Unsigned NuGets'
+        condition: eq(variables['Agent.OS'], 'Windows_NT') # Only run this step on Windows
+        displayName: 'Publish NuGets'
         inputs:
           artifactName: nuget
           pathToPublish: '$(Build.ArtifactStagingDirectory)'
