--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <Project>
   <PropertyGroup>
-    <!-- Fixes https://github.com/dotnet/maui/pull/12114 -->
-    <PublishReadyToRun>false</PublishReadyToRun>
-    <LangVersion>latest</LangVersion>
+    <NetVersion>net8.0</NetVersion>
+    <MauiPackageVersion>8.0.0-rc.2.9511</MauiPackageVersion>
+    <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <NoWarn>NETSDK1023</NoWarn>
+    <SkipValidateMauiImplicitPackageReferences>true</SkipValidateMauiImplicitPackageReferences>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
     <GenerateErrorForMissingTargetingPacks>false</GenerateErrorForMissingTargetingPacks>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
