--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -184,7 +184,7 @@ jobs:
 
       # publish the packages
       - task: PublishBuildArtifacts@1
-        condition: eq(variables['Agent.OS'], 'Darwin') # Only run this step on macOS
+        condition: eq(variables['Agent.OS'], 'Windows_NT') # Only run this step on macOS
         displayName: 'Publish NuGets'
         inputs:
           artifactName: nuget
