--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -149,10 +149,12 @@ jobs:
 
       # check vulnerabilities
       - powershell: |
-          dotnet list $(PathToLibrarySolution) package --vulnerable --include-transitive | findstr /S /c:"has the following vulnerable packages";
+          cd src
+          dotnet list package --include-transitive # Print all transitive packages
+          dotnet list package --vulnerable --include-transitive | findstr /S /c:"has the following vulnerable packages"; # Print all transitive packages with vulnerabilities
           if ($LastExitCode -ne 1)
           {
-            dotnet list $(PathToLibrarySolution) package --vulnerable --include-transitive;
+            dotnet list package --vulnerable --include-transitive;
             exit 1;
           }
 
