--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,7 +2,8 @@
 <Project>
   <PropertyGroup>
     <NetVersion>net8.0</NetVersion>
-    <MauiPackageVersion>8.0.3</MauiPackageVersion>
+    <MauiPackageVersion>8.0.10</MauiPackageVersion>
+    <MauiCommunityToolkitPackageVersion>7.0.1</MauiCommunityToolkitPackageVersion>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
