--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -156,6 +156,7 @@ jobs:
           failIfCoverageEmpty: true
 
       - task: PublishPipelineArtifact@1
+        condition: eq(variables['Agent.OS'], 'Windows_NT') # Only run this step on Windows
         inputs:
           targetPath: '$(Build.SourcesDirectory)/artifacts/BenchmarkDotNet.Artifacts'
           artifact: 'benchmark-results'
