--- a/src/CommunityToolkit.Maui.Markup.Benchmarks/CommunityToolkit.Maui.Markup.Benchmarks.csproj
+++ b/src/CommunityToolkit.Maui.Markup.Benchmarks/CommunityToolkit.Maui.Markup.Benchmarks.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>$(NetVersion)</TargetFramework>
     <OutputType>Exe</OutputType>
     <IsPackable>false</IsPackable>
+    <Features>InterceptorsPreview</Features>
   </PropertyGroup>
   
   <PropertyGroup>
